src/objects/INC_LandingPageReportCharts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Col_1_Chart__c</fullName>
        <label>Col 1 Chart</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Col_2_Chart__c</fullName>
        <label>Col 2 Chart</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Col_3_Chart__c</fullName>
        <label>Col 3 Chart</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>PM
ADMIN
APPROVE</description>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Number__c</fullName>
        <label>Row Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>INC Landing Page Report Charts</label>
</CustomObject>